2007-11-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-setComponent:newComponent]): retain the component object.
	([UIxComponentEditor -organizerIdentity]): new accessor method to
	handle list of possible organizers.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-event]): retain the returned event object.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -saveComponent:newEvent]): reset the
	organizer only if there are no attendees AND the owner of the
	component is not the organizer him-/herself.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): rewrote in a way that ensures that each case is
	handled properly.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -isEqual:otherUser]): new
	override method.

	* UI/Scheduler/UIxTaskEditor.m ([-acceptAction])
	([-declineAction]): commented out unused methods.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -deleteFromCalendarAction]): actually
	delete the found object.

2007-11-18  Ludovic Marcotte <ludovic@inverse.ca>

	* SoObjects/Mailer/SOGoMailBodyPart.m
	SoObjects/Mailer/SOGoMailObject.m
	UI/MailPartViewers/UIxMailPartViewer.m
	Added support of messages containing non-textual
	content and no parts.

	* UI/MailerUI/UIxMailView.m
	SoObjects/Mailer/SOGoMailObject.m
	UI/Templates/MailerUI/UIxMailView.wox
	Added support for the Reply-To header upon
	message display.

2007-11-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -saveAction]):
	invoke saveComponent:.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor -hasOrganizer])
	([UIxComponentEditor -organizerName]): new template accessor
	related to displaying the event's organizer.
	([-containsConflict:_component]): removed method.
	([UIxComponentEditor -takeValuesFromRequest:_rqinContext:_ctx]):
	set RSVP to "TRUE" on each attendee.
